force-app/main/default/objects/Social_Handle__c/Social_Handle__c.object-meta.xml
<CustomObject>
    <label>Social Handle</label>
    <nameField>
        <label>Social Handle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Handles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>