force-app/main/default/objects/Social_Handle__c/fields/Handle_Icon__c.field-meta.xml
<CustomField>
    <fullName>Handle_Icon__c</fullName>
    <label>Handle Icon</label>
    <type>Url</type>
</CustomField>